home page update and paypal

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,10 @@
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
 
-  <script src=”https://js.stripe.com/v3/"> </script> <!--START IZMENA ZA ADMINLTE-->
+  <!-- <link rel="stylesheet" href="/static/css/bootstrap/bootstrapNETREBA.css">> -->
+
+  <script src=”https://js.stripe.com/v3/"> </script>
+  <!--START IZMENA ZA ADMINLTE-->
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="/static/css/adminlte/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
