fixed html error

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
   <!-- <link rel="stylesheet" href="/static/css/bootstrap/bootstrapNETREBA.css">> -->
 
-  <script src=”https://js.stripe.com/v3/"> </script>
+  <script src="https://js.stripe.com/v3/"></script>
   <!--START IZMENA ZA ADMINLTE-->
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="/static/css/adminlte/fontawesome-free/css/all.min.css">
