added error boundery to our app

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,9 @@
   <!--START IZEMNA ZA ADMINLTE 2deo-->
   <!-- REQUIRED SCRIPTS -->
 
+  <!-- react motion for animatinos-->
+  <!-- <script src="bower_components/react-motion/build/react-motion.js"></script> -->
+
   <!-- jQuery -->
   <script src="/static/js/adminlte/jquery.min.js"></script>
   <!-- Bootstrap 4 -->
