--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <script src="/static/js/map-widget.js"></script>
+  <script src="/static/js/quotes-widget.js"></script>
+
 
   <!--START IZEMNA ZA ADMINLTE 2deo-->
   <!-- REQUIRED SCRIPTS -->
